Cambiado script para que borre app/cache/* por haberme dado problemas en produccion. Comentado el que un heroe atacante pueda perder un nivel si pierde el ataque. Arreglado el magiclevel 25 de los dragones blancos, errata. Mejorada la ayuda. Implementado el porcentaje de bonus de recursos de los heroes en summary. Cambiado htaccess para que siempre sea app.php en prod.

--- a/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
@@ -242,10 +242,10 @@
                             <tr>
                                 <td class="text-left"><i class="fa fa-fw fa-home"></i><span class="label label-extra"><a href="{{ path('archmage_game_home_help') }}#{{ construction.building.name|slug }}" class="link">{{ construction.building.name }}</a></span></td>
                                 <td class="text-right">{{ construction.quantity|nf }}</td>
-                                <td class="text-right">{{ (construction.quantity * construction.building.power)|nf }}</td>
-                                <td class="text-right">{{ (construction.quantity * construction.building.goldResource)|nf }}</td>
-                                <td class="text-right">{{ (construction.quantity * construction.building.peopleResource)|nf }}</td>
-                                <td class="text-right">{{ (construction.quantity * construction.building.manaResource)|nf }}</td>
+                                <td class="text-right">+{{ (construction.quantity * construction.building.power)|nf }}</td>
+                                <td class="text-right">+{{ (construction.quantity * construction.building.goldResource)|nf }}</td>
+                                <td class="text-right">+{{ (construction.quantity * construction.building.peopleResource)|nf }}</td>
+                                <td class="text-right">+{{ (construction.quantity * construction.building.manaResource)|nf }}</td>
                                 <td class="text-right">-{{ (construction.quantity * construction.building.goldMaintenance)|nf }}</td>
                                 <td class="text-right">-{{ (construction.quantity * construction.building.peopleMaintenance)|nf }}</td>
                                 <td class="text-right">-{{ (construction.quantity * construction.building.manaMaintenance)|nf }}</td>
@@ -258,7 +258,7 @@
                             <tr>
                                 <td class="text-left"><i class="fa fa-fw fa-group"></i><span class="label label-{{ troop.unit.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}" class="link">{{ troop.unit.name }}</a></span></td>
                                 <td class="text-right">{{ troop.quantity|nf }}</td>
-                                <td class="text-right">{{ (troop.quantity * troop.unit.power)|nf }}</td>
+                                <td class="text-right">+{{ (troop.quantity * troop.unit.power)|nf }}</td>
                                 <td class="text-right">0</td>
                                 <td class="text-right">0</td>
                                 <td class="text-right">0</td>
@@ -275,9 +275,9 @@
                                 <td class="text-left"><i class="fa fa-fw fa-user"></i><span class="label label-{{ contract.hero.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ contract.hero.name|slug }}" class="link">{{ contract.hero.name }}</a></span></td>
                                 <td class="text-right">{{ contract.level|nf }}</td>
                                 <td class="text-right">0</td>
-                                <td class="text-right">0</td>
-                                <td class="text-right">0</td>
-                                <td class="text-right">0</td>
+                                <td class="text-right">+{{ (contract.level * contract.hero.skill.goldBonus)|nf }} }}%</td>
+                                <td class="text-right">+{{ (contract.level * contract.hero.skill.manaBonus)|nf }} }}%</td>
+                                <td class="text-right">+{{ (contract.level * contract.hero.skill.peopleBonus)|nf }} }}%</td>
                                 <td class="text-right">-{{ (contract.level * contract.hero.goldMaintenance)|nf }}</td>
                                 <td class="text-right">-{{ (contract.level * contract.hero.peopleMaintenance)|nf }}</td>
                                 <td class="text-right">-{{ (contract.level * contract.hero.manaMaintenance)|nf }}</td>
@@ -289,7 +289,7 @@
                             {% for enchantment in player.enchantmentsOwner %}
                             <tr>
                                 <td class="text-left"><i class="fa fa-fw fa-link"></i><span class="label label-{{ enchantment.spell.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ enchantment.spell.name|slug }}" class="link">{{ enchantment.spell.name }}</a></span> a <span class="label label-{{ enchantment.victim.faction.class }}"><a href="{{ path('archmage_game_account_profile', {'id': enchantment.victim.id}) }}" class="link">{{ enchantment.victim.nick }}</a></span></td>
-                                <td class="text-right">1</td>
+                                <td class="text-right">{{ enchantment.owner.magic)|nf }}</td>
                                 <td class="text-right">0</td>
                                 <td class="text-right">0</td>
                                 <td class="text-right">0</td>
