Arreglado error en summary

--- a/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
@@ -275,9 +275,9 @@
                                 <td class="text-left"><i class="fa fa-fw fa-user"></i><span class="label label-{{ contract.hero.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ contract.hero.name|slug }}" class="link">{{ contract.hero.name }}</a></span></td>
                                 <td class="text-right">{{ contract.level|nf }}</td>
                                 <td class="text-right">0</td>
-                                <td class="text-right">+{{ (contract.level * contract.hero.skill.goldBonus)|nf }} }}%</td>
-                                <td class="text-right">+{{ (contract.level * contract.hero.skill.manaBonus)|nf }} }}%</td>
-                                <td class="text-right">+{{ (contract.level * contract.hero.skill.peopleBonus)|nf }} }}%</td>
+                                <td class="text-right">+{{ (contract.level * contract.hero.skill.goldBonus)|nf }}%</td>
+                                <td class="text-right">+{{ (contract.level * contract.hero.skill.manaBonus)|nf }}%</td>
+                                <td class="text-right">+{{ (contract.level * contract.hero.skill.peopleBonus)|nf }}%</td>
                                 <td class="text-right">-{{ (contract.level * contract.hero.goldMaintenance)|nf }}</td>
                                 <td class="text-right">-{{ (contract.level * contract.hero.peopleMaintenance)|nf }}</td>
                                 <td class="text-right">-{{ (contract.level * contract.hero.manaMaintenance)|nf }}</td>
