--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -11,6 +11,7 @@
             {# con los css no funciona el @Bundle shortcut #}
             {% stylesheets filter='uglifycss' filter='cssrewrite' output='css/base.min.css'
             'bower/normalize-css/normalize.css'
+            '@ArchmageGameBundle/Resources/public/css/font.css'
             'bower/fontawesome/css/font-awesome.css'
             '@ArchmageGameBundle/Resources/public/css/theme.css'
             'bower/bootstrap-select/dist/css/bootstrap-select.css'
@@ -18,7 +19,6 @@
             '@ArchmageGameBundle/Resources/public/css/style.css'
             %}
             <link rel="stylesheet" type="text/css" media="screen" href="{{ asset_url }}" />
-            <link href='http://fonts.googleapis.com/css?family=MedievalSharp' rel='stylesheet' type='text/css' />
             {% endstylesheets %}
         {% endblock %}
         {# favicon #}
