--- a/src/Archmage/GameBundle/Resources/public/css/theme.css
+++ b/src/Archmage/GameBundle/Resources/public/css/theme.css
@@ -21,7 +21,6 @@ figcaption,
 figure,
 footer,
 header,
-hgroup,
 main,
 menu,
 nav,
@@ -1073,7 +1072,7 @@ html {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-    font-family: MedievalSharp;
+    font-family: AntykwaTorunskaBold;
     font-size: 16px;
     line-height: 1.42857143;
     color: #ffffff;
@@ -1175,7 +1174,7 @@ h6,
 .h4,
 .h5,
 .h6 {
-    font-family: MedievalSharp;
+    font-family: AntykwaTorunskaBold;
     font-weight: 500;
     line-height: 1.1;
     color: inherit;
@@ -1523,7 +1522,7 @@ code,
 kbd,
 pre,
 samp {
-    font-family: MedievalSharp;
+    font-family: AntykwaTorunskaBold;
 }
 code {
     padding: 2px 4px;
@@ -4531,7 +4530,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus {
     color: #ffffff;
-    background-color: none;
+    background-color: transparent;
 }
 .navbar-default .navbar-text {
     color: #ffffff;
@@ -4627,7 +4626,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
 .navbar-inverse .navbar-brand:hover,
 .navbar-inverse .navbar-brand:focus {
     color: #ffffff;
-    background-color: none;
+    background-color: transparent;
 }
 .navbar-inverse .navbar-text {
     color: #cccccc;
@@ -6009,7 +6008,7 @@ button.close {
     position: absolute;
     z-index: 1030;
     display: block;
-    font-family: MedievalSharp;
+    font-family: AntykwaTorunskaBold;
     font-style: normal;
     font-weight: normal;
     letter-spacing: normal;
@@ -6127,7 +6126,7 @@ button.close {
     display: none;
     max-width: 276px;
     padding: 1px;
-    font-family: MedievalSharp;
+    font-family: AntykwaTorunskaBold;
     font-style: normal;
     font-weight: normal;
     letter-spacing: normal;
