--- a/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
@@ -21,7 +21,7 @@
                                 <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/army.jpg') }}">
                             </div>
                             <div class="col-xs-8 text-padded">
-                                <div class="col-xs-12">Aquí puedes gastar 2 <span class="label label-extra">Turnos</span> y atacar a otro mago para intentar disminuir su poder e incluso robarle <span class="label label-extra">Tierras</span> y <span class="label label-extra">Oro</span>. <u>No puedes atacar a otro mago mucho más débil (-20% poder o menos) que tú.</u></div>
+                                <div class="col-xs-12">Aquí puedes gastar 2 <span class="label label-extra">Turnos</span> y atacar a otro mago para intentar disminuir su poder e incluso robarle <span class="label label-extra">Tierras</span> y <span class="label label-extra">Oro</span>. No puedes atacar a otro mago mucho más débil (-20% poder o menos) que tú.</div>
                             </div>
                         </div>
                     </div>
