--- a/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
@@ -111,7 +111,7 @@
             </div>
             {% else %}
             <div class="container">
-                <div class="col-xs-12 alert alert-danger ribbon text-responsive text-center" role="alert">
+                <div class="col-xs-12 alert alert-danger text-responsive text-center" role="alert">
                     <i class="fa fa-fw fa-exclamation-triangle"></i>Actualmente no tienes tropas en tu ejército. Tal vez deberías <i class="fa fa-fw fa-user-plus"></i><a href="{{ path('archmage_game_army_recruit') }}">Reclutar</a> alguna.
                 </div>
             </div>
