--- a/src/Archmage/GameBundle/Resources/views/Magic/artifact.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/artifact.html.twig
@@ -79,7 +79,7 @@
         </div>
         {% else %}
         <div class="container">
-            <div class="col-xs-12 alert alert-danger ribbon text-responsive text-center" role="alert">
+            <div class="col-xs-12 alert alert-danger text-responsive text-center" role="alert">
                 <i class="fa fa-fw fa-exclamation-triangle"></i>Actualmente no tienes artefactos en tu poder. Tal vez deberías comprar alguno en la <i class="fa fa-fw fa-legal"></i><a href="{{ path('archmage_game_kingdom_auction') }}">Subasta</a>.
             </div>
         </div>
