--- a/src/Archmage/GameBundle/Resources/views/Magic/conjure.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/conjure.html.twig
@@ -88,7 +88,7 @@
         </div>
         {% else %}
         <div class="container">
-            <div class="col-xs-12 alert alert-danger ribbon text-responsive text-center" role="alert">
+            <div class="col-xs-12 alert alert-danger text-responsive text-center" role="alert">
                 <i class="fa fa-fw fa-exclamation-triangle"></i>Actualmente no tienes hechizos investigados. Tal vez deberías <i class="fa fa-fw fa-graduation-cap"></i><a href="{{ path('archmage_game_magic_research') }}">Investigar</a> algunos.
             </div>
         </div>
