--- a/src/Archmage/GameBundle/Resources/views/Magic/dispell.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/dispell.html.twig
@@ -70,7 +70,7 @@
         {% endfor %}
         {% if player.enchantmentsOwner and player.enchantmentsVictim is empty %}
         <div class="container">
-            <div class="col-xs-12 alert alert-danger ribbon text-responsive text-center" role="alert">
+            <div class="col-xs-12 alert alert-danger text-responsive text-center" role="alert">
                 <i class="fa fa-fw fa-exclamation-triangle"></i>Actualmente no tienes encantamientos en tu reino, amigos o enemigos. Tal vez deberías <i class="fa fa-fw fa-graduation-cap"></i><a href="{{ path('archmage_game_magic_research') }}">Investigar</a> algunos.
             </div>
         </div>
