--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -33,14 +33,14 @@
     {% block flashbag %}
     <div class="container">
         {% if error is defined and error %}
-        <div class="col-xs-12 alert alert-danger alert-dismissible ribbon text-center text-responsive" role="alert">
+        <div class="col-xs-12 alert alert-danger alert-dismissible text-center text-responsive" role="alert">
             <button type="button" class="close" data-dismiss="alert" aria-label="close"><i class="fa fa-fw fa-times-circle"></i></button>
             <i class="fa fa-fw fa-exclamation-triangle"></i>{{ error.message }}
         </div>
         {% endif %}
         {% for type, flashMessages in app.session.flashbag.all() %}
             {% for flashMessage in flashMessages %}
-        <div class="col-xs-12 alert alert-{{ type }} alert-dismissible ribbon text-center text-responsive" role="alert">
+        <div class="col-xs-12 alert alert-{{ type }} alert-dismissible text-center text-responsive" role="alert">
             <button type="button" class="close" data-dismiss="alert" aria-label="close"><i class="fa fa-fw fa-times-circle"></i></button>
             {# |raw para que pase por el controlador codigos html como <a href>, sino los trunca #}
             <i class="fa fa-fw fa-exclamation-triangle"></i>{{ flashMessage|raw }}
