--- a/src/Archmage/GameBundle/Resources/views/Kingdom/tax.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/tax.html.twig
@@ -13,7 +13,7 @@
             <div class="row">
                 <div class="col-xs-12 col-md-offset-3 col-md-6">
                     <div class="panel panel-default">
-                        <div class="panel-heading text-center">{{ (player.goldResourcePerTurn * 2)|nf }} <span class="label label-extra">Oro</span> por <span class="label label-extra">Turno</span></div>
+                        <div class="panel-heading text-center">{{ (player.goldResourcePerTurn * 2)|nf }} <span class="label label-extra">Oro/Turno</span></div>
                         <div class="panel-body text-responsive">
                             <div class="row">
                                 <div class="col-xs-4">
