--- a/src/Archmage/GameBundle/Resources/views/Kingdom/temple.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/temple.html.twig
@@ -20,7 +20,7 @@
                                     <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/temple.jpg') }}">
                                 </div>
                                 <div class="col-xs-8 text-padded">
-                                    <div class="col-xs-12">Aquí puedes gastar 10 <span class="label label-extra">Turnos</span> para recibir un encantamiento aleatorio, bueno o malo, de uno de los 5 Dioses, pero exigirán un sacrificio a cambio.</div>
+                                    <div class="col-xs-12">Aquí puedes gastar 10 <span class="label label-extra">Turnos</span> para recibir un encantamiento aleatorio de nivel 10, bueno o malo, de uno de los 5 Dioses. Pero cuidado, exigirán la mitad de algo como sacrificio.</div>
                                 </div>
                             </div>
                         </div>
