--- a/src/Archmage/GameBundle/Resources/views/Magic/charge.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/charge.html.twig
@@ -13,7 +13,7 @@
             <div class="row">
                 <div class="col-xs-12 col-md-offset-3 col-md-6">
                     <div class="panel panel-default">
-                        <div class="panel-heading text-center">{{ player.manaResourcePerTurn|nf }} <span class="label label-extra">Mana</span> por <span class="label label-extra">Turno</span></div>
+                        <div class="panel-heading text-center">{{ player.manaResourcePerTurn|nf }} <span class="label label-extra">Maná/Turno</span></div>
                         <div class="panel-body text-responsive">
                             <div class="row">
                                 <div class="col-xs-4">
@@ -26,7 +26,7 @@
                         </div>
                         <div class="panel-middle text-center">Fórmula</div>
                         <div class="panel-body text-responsive text-only text-center">
-                            <p>MANA<sub>cargado</sub> = NODOS<sub>jugador</sub> * MANA<sub>nodo</sub> * 2</p>
+                            <p>MANÁ<sub>cargado</sub> = NODOS<sub>jugador</sub> * MANÁ<sub>nodo</sub> * 2</p>
                         </div>
                         <div class="panel-footer text-center">
                             <form class="form-inline" data-toggle="validator" action="{{ path('archmage_game_magic_charge') }}" method="post">
