--- a/src/Archmage/GameBundle/Resources/views/Magic/research.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/research.html.twig
@@ -122,7 +122,7 @@
         </div>
         {% else %}
         <div class="container">
-            <div class="col-xs-12 alert alert-danger ribbon text-responsive text-center" role="alert">
+            <div class="col-xs-12 alert alert-danger text-responsive text-center" role="alert">
                 <i class="fa fa-fw fa-exclamation-triangle"></i>Ya no tienes más hechizos nuevos que investigar hasta que aumentes tu nivel. Tal vez puedas comprar alguno más en la <i class="fa fa-fw fa-legal"></i><a href="{{ path( 'archmage_game_kingdom_auction' ) }}">Subasta</a>.
             </div>
         </div>
