--- a/src/Archmage/UserBundle/Resources/views/Registration/register.html.twig
+++ b/src/Archmage/UserBundle/Resources/views/Registration/register.html.twig
@@ -7,6 +7,7 @@
     <div class="jumbotron text-center">
         {% include "ArchmageUserBundle::logo.html.twig" %}
         <form id="register" name="register" class="form-signin" data-toggle="validator" action="{{ path("fos_user_registration_register") }}" {{ form_enctype(form) }} method="post">
+            <small>Escoge una facción</small>
             <select class="form-control selectpicker show-tick" id="faction" name="faction" data-live-search="false" data-style="btn-default btn-lg">
                 {% for faction in factions if faction.name != 'Neutral' %}
                 <option value="{{ faction.id }}" data-content="<span class='label label-{{ faction.class }}'>{{ faction.name }}</span>">{{ faction.name }}</option>
