--- a/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
@@ -14,7 +14,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading text-center">Introducción</div>
                 <div class="panel-body text-responsive text-only">
-                    <p>En ArchMage, asumirás el rol de un Mago o Maga novici@ intentando hacerse un huevo en un mundo plagado de enemigos. Competirás contra otros jugadores y NPCs por la supremacía en una carrera económica y militar, investigando diversos y poderosos Hechizos, reclutando gran variedad de Tropas, contratando Héroes que ayudarán en tu campaña y encontrando misteriosos Artefactos que usar en tu beneficio, o incluso en perjuicio de otros.</p>
+                    <p>En ArchMage, asumirás el rol de un Mago o Maga novici@ intentando hacerse un hueco en un mundo plagado de enemigos. Competirás contra otros jugadores y NPCs por la supremacía en una carrera económica y militar, investigando diversos y poderosos Hechizos, reclutando gran variedad de Tropas, contratando Héroes que ayudarán en tu campaña y encontrando misteriosos Artefactos que usar en tu beneficio, o incluso en perjuicio de otros.</p>
                 </div>
             </div>
             <div class="panel panel-default">
