--- a/src/Archmage/GameBundle/Resources/views/Army/disband.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/disband.html.twig
@@ -48,8 +48,8 @@
                             <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ troop.unit.peopleMaintenance|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ troop.unit.manaMaintenance|nf }}</div>
                             {# row #}
-                            <div class="col-xs-6"><i class="fa fa-fw fa-user"></i><a href="#">{{ troop.unit.family.name }}</a></div>
-                            <div class="col-xs-6"><i class="fa fa-fw fa-cogs"></i><a href="#">{{ troop.unit.type.name }}</a></div>
+                            <div class="col-xs-6"><i class="fa fa-fw fa-user"></i>{{ troop.unit.family.name }}</div>
+                            <div class="col-xs-6"><i class="fa fa-fw fa-cogs"></i>{{ troop.unit.type.name }}</div>
                             {# row #}
                             {# <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i><a href="#">Habilidad</a></div> #}
                             {# row #}
