--- a/src/Archmage/GameBundle/Resources/views/Army/recruit.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/recruit.html.twig
@@ -50,8 +50,8 @@
                             <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ unit.peopleMaintenance|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ unit.manaMaintenance|nf }}</div>
                             {# row #}
-                            <div class="col-xs-6"><i class="fa fa-fw fa-user"></i><a href="#">{{ unit.family.name }}</a></div>
-                            <div class="col-xs-6"><i class="fa fa-fw fa-cogs"></i><a href="#">{{ unit.type.name }}</a></div>
+                            <div class="col-xs-6"><i class="fa fa-fw fa-user"></i>{{ unit.family.name }}</div>
+                            <div class="col-xs-6"><i class="fa fa-fw fa-cogs"></i>{{ unit.type.name }}</div>
                             {# row #}
                             {# <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i><a href="#">Habilidad</a></div> #}
                             {# row #}
