Arreglado un bug en ArmyController por el cual si un target gasta el ultimo Item que tenia en defensa, al no poner target->setItem(null) revienta. Cambiadas skills de Control de Clima para que de +3 tierras por turno en lugar de +1%. Mejoradas algunas views.

--- a/src/Archmage/GameBundle/Resources/views/Magic/conjure.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/conjure.html.twig
@@ -20,7 +20,7 @@
                             <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/magic.jpg') }}">
                         </div>
                         <div class="col-xs-8 text-padded">
-                            <div class="col-xs-12">Aquí puedes gastar <span class="label label-extra">Turnos</span> y <span class="label label-extra">Maná</span> para intentar lanzar un hechizo. Si lo lanzas sobre un enemigo, puede que no consigas traspasar su <span class="label label-extra">Defensa Mágica</span>.</div>
+                            <div class="col-xs-12">Aquí puedes gastar <span class="label label-extra">Turnos</span> y <span class="label label-extra">Maná</span> para intentar lanzar un hechizo. Si lo lanzas sobre un enemigo, puede que no consigas traspasar su <span class="label label-extra">Defensa Mágica</span>. Poner un hechizo de batalla en defensa cuesta 1 <span class="label label-extra">Turno</span></div>
                         </div>
                     </div>
                 </div>
