--- a/src/Archmage/GameBundle/Resources/views/Magic/charge.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/charge.html.twig
@@ -13,7 +13,7 @@
             <div class="row">
                 <div class="col-xs-12 col-md-offset-3 col-md-6">
                     <div class="panel panel-default">
-                        <div class="panel-heading text-center">{{ player.manaResourcePerTurn|nf }} <span class="label label-extra">Maná/Turno</span></div>
+                        <div class="panel-heading text-center">{{ (player.manaResourcePerTurn * 2)|nf }} <span class="label label-extra">Maná/Turno</span></div>
                         <div class="panel-body text-responsive">
                             <div class="row">
                                 <div class="col-xs-4">
