--- a/src/Archmage/GameBundle/Resources/public/css/style.css
+++ b/src/Archmage/GameBundle/Resources/public/css/style.css
@@ -329,3 +329,7 @@ html {-webkit-text-size-adjust: none !important;}
     border-top: 1px solid rgba(0, 0, 0, 0.6);
     border-bottom: 1px solid rgba(0, 0, 0, 0.6);
 }
+/* SEARCH */
+.searchbox {
+    margin-bottom: 20px;
+}
