Arreglado un bug en AuctionCommand en el que si la Auction no tiene winner, no se borra de la base de datos.

--- a/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
@@ -9,7 +9,7 @@
         <div class="col-xs-12 searchbox">
             <div class="form-group">
                 <div class="input-group stylish-input-group">
-                    <input type="text" id="searchbox" name="searchbox" class="form-control" placeholder="'hechizos', 'caos', 'bestias', 'asedio', 'turnos', 'oro', ...">
+                    <input type="text" id="searchbox" name="searchbox" class="form-control" placeholder="hechizos, unidades, tropas, caos, bestias, asedio, turnos, oro, etc...">
                     <span class="input-group-addon">
                         &nbsp;<i class="fa fa-fw fa-lg fa-search fa-inverse"></i>&nbsp;
                     </span>
